Fix #71 max width of thumb on mobile
Now fixed on FF as well as Chrome (both on WIn10 + Android).

--- a/css/newsclip.css
+++ b/css/newsclip.css
@@ -106,8 +106,8 @@ label.toDate {
 }
 
 .thumb img {
-    left: 0;
     max-width: 100%;
+    left: 0;
     box-shadow: 0 3px 9px 0 rgba(0, 0, 0, 0.40);
     transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
@@ -181,6 +181,7 @@ h2 {
         width: 48%;
     }
     .thumb {
+        width: 48%;
         position: absolute;
         top: 0;
         left: 50%;
@@ -197,13 +198,13 @@ h2 {
 @media not screen and (min-width: 10cm) {
     .story {
         margin: 10px;
-        /*        padding: 10px;*/
     }
     .thumb {
         margin: 10px 0;
         position: relative;
         min-height: 130px;
         display: inline-block;
+        width: 100%;
     }
     .thumb img {
         max-height: 200px;
